--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:layout_width="250dp"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:hint="Enter movie title"
         android:id="@+id/user_input"
@@ -49,5 +49,6 @@
         android:layout_below="@+id/header"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="53dp" />
+        android:layout_marginTop="53dp"
+        android:onClick="searchView"  />
 </RelativeLayout>
